# agent-repo-safety-check

./: .gitignore  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  check_request.yml
.github/workflows/: test.yml
agent_repo_safety_check/: __init__.py  cli.py  models.py  redact.py  scanner.py
agent_repo_safety_check/scanners/: __init__.py  agents.py  github_actions.py  local_secrets.py  node.py  repo_hygiene.py  vscode.py
agent_repo_safety_check/writers/: __init__.py  json_writer.py  markdown.py
docs/: JSON_REPORT.md  ROADMAP.md
docs/sample-reports/: public-repository-scan-examples.md  risky-node-project-agent.md
samples/risky-node-project/: package.json
samples/risky-node-project/.claude/: settings.json
samples/risky-node-project/.codex/: config.toml
samples/risky-node-project/.github/workflows/: release.yml
tests/: test_scan.py
